Added paragraph text

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <div class="container-fluid justify-content-center bg1 py-3">
         <h1 class="text-center text-white">Hi, I'm Jayson!</h1>
+        <p>Hello</p>
     </div>
   </body>
 </html>
