Implemented header with JS animation

--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
+
+    <header class="masthead container-fluid justify-content-center align-middle text-center py-5">
+      <div class="intro-body pb-5">
+        <h1 class="ml-auto mr-auto">Hi, my name is Jayson!</h1>
+        <h2 class="ml-auto mr-auto">And I'm a
+          <span
+              class="txt-rotate"
+              data-period="2000"
+              data-rotate='[ "developer.", "designer.", "photographer.", "sports enthusiast!" ]'></span>
+        </h2>
+      </div>
+    </header>
 
     <nav class="navbar navbar-right navbar-expand-sm navbar-dark bg-main">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false">
@@ -25,13 +38,16 @@
         <a class="navbar-brand" href="#"></a>
         <ul class="navbar-nav navbar-right ml-auto mt-2 mt-lg-0">
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">About<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">Skills</a>
           </li>
           <li class="nav-item px-1">
             <a class="nav-link" href="#">Experience</a>
+          </li>
+          <li class="nav-item px-1">
+            <a class="nav-link" href="#">Projects</a>
           </li>
           <li class="nav-item px-1">
             <a class="nav-link" href="#">Contact</a>
@@ -39,9 +55,5 @@
         </ul>
       </div>
     </nav>
-
-    <div class="container-fluid justify-content-center bg1 py-3">
-      <h1 class="text-center">Hi, I'm Jayson!</h1>
-    </div>
   </body>
 </html>
