--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="index.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <!-- FA CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <title>Jayson's Website </title>
   </head>
 
@@ -18,7 +21,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 
-    <header class="masthead container-fluid justify-content-center align-middle text-center py-5">
+    <header class="masthead container-fluid justify-content-center align-middle text-center bg-main py-5">
       <div class="intro-body pb-5">
         <h1 class="ml-auto mr-auto">Hi, my name is Jayson!</h1>
         <h2 class="ml-auto mr-auto">And I'm a
@@ -38,7 +41,7 @@
         <a class="navbar-brand" href="#"></a>
         <ul class="navbar-nav navbar-right ml-auto mt-2 mt-lg-0">
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item px-1">
             <a class="nav-link" href="#">Skills</a>
@@ -55,5 +58,22 @@
         </ul>
       </div>
     </nav>
+
+    <div id="about" class="container-fluid text-center bg-main py-5">
+      <h1 class="py-3">ABOUT ME</h1>
+      <img src="img/profile-pic.jpg" alt="profile-pic" class="rounded-circle py-2" width="30%">
+      <p class="col-12 col-sm-7 mt-4 ml-auto mr-auto">I'm Jayson, an aspiring software developer. I am currently enrolled in the double degree program studying Business Administration at Wilfrid Laurier University and Computer Science at University of Waterloo.</p>
+      <div class="container align-middle pt-4">
+        <button type="button" class="btn btn-success mx-2">
+          <i class="fa fa-envelope fa-lg mr-2" href="mailto:jayson.lou@gmail.com"></i>Email
+        </button>
+        <button type="button" class="btn btn-primary mx-2">
+          <i class="fa fa-linkedin fa-lg mr-2" href="https://www.linkedin.com/in/jaysonlou/"></i>LinkedIn
+        </button>
+        <button type="button" class="btn btn-warning mx-2">
+          <i class="fa fa-github fa-lg mr-2" href="https://github.com/jayson-lou"></i>GitHub
+        </button>
+      </div>
+    </div>
   </body>
 </html>
