--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="index.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <!-- FA CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <title>Jayson's Website </title>
   </head>
@@ -33,7 +33,7 @@
       </div>
     </header>
 
-    <nav class="navbar navbar-right navbar-expand-sm navbar-dark bg-main">
+    <nav class="navbar navbar-right navbar-expand-sm navbar-fixed-top navbar-dark bg-main">
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,7 +44,7 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Skills</a>
+            <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item px-1">
             <a class="nav-link" href="#">Experience</a>
@@ -60,19 +60,38 @@
     </nav>
 
     <div id="about" class="container-fluid text-center bg-main py-5">
-      <h1 class="py-3">ABOUT ME</h1>
+      <h1 class="py-3 text-uppercase"><strong>About Me</strong></h1>
       <img src="img/profile-pic.jpg" alt="profile-pic" class="rounded-circle py-2" width="30%">
       <p class="col-12 col-sm-7 mt-4 ml-auto mr-auto">I'm Jayson, an aspiring software developer. I am currently enrolled in the double degree program studying Business Administration at Wilfrid Laurier University and Computer Science at University of Waterloo.</p>
-      <div class="container align-middle pt-4">
-        <button type="button" class="btn btn-success mx-2">
-          <i class="fa fa-envelope fa-lg mr-2" href="mailto:jayson.lou@gmail.com"></i>Email
+      <div class="container align-middle py-4">
+        <button type="button" class="btn btn-success col-6 col-sm-3 mx-2 mb-2">
+          <i class="fas fa-envelope fa-lg mr-2" href="mailto:jayson.lou@gmail.com"></i>Email
         </button>
-        <button type="button" class="btn btn-primary mx-2">
-          <i class="fa fa-linkedin fa-lg mr-2" href="https://www.linkedin.com/in/jaysonlou/"></i>LinkedIn
+        <button type="button" class="btn btn-primary col-6 col-sm-3 mx-2 mb-2">
+          <i class="fab fa-linkedin fa-lg mr-2" href="https://www.linkedin.com/in/jaysonlou/"></i>LinkedIn
         </button>
-        <button type="button" class="btn btn-warning mx-2">
-          <i class="fa fa-github fa-lg mr-2" href="https://github.com/jayson-lou"></i>GitHub
+        <button type="button" class="btn btn-warning col-6 col-sm-3 mx-2 mb-2">
+          <i class="fab fa-github fa-lg mr-2" href="https://github.com/jayson-lou"></i>GitHub
         </button>
+      </div>
+    </div>
+
+    <div id="skills" class="container-fluid text-center bg-second py-5">
+      <h1 class="py-3 text-uppercase"><strong>Skills</strong></h1>
+      <p class="col-12 col-sm-7 mt-4 ml-auto mr-auto">As a second year computer science student, I'm always trying to pick up new languages and technologies. Here are some that I've mastered already!</p>
+      <div class="row pt-5 px-3">
+        <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
+            <i class="fas fa-code fa-4x pb-4"></i>
+            <h3><strong>Languages</strong></h3>
+        </div>
+        <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
+            <i class="fas fa-chart-bar fa-4x pb-4"></i>
+            <h3><strong>Technologies</strong></h3>
+        </div>
+        <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
+            <i class="fas fa-desktop fa-4x pb-4"></i>
+            <h3><strong>Operating Systems</strong></h3>
+        </div>
       </div>
     </div>
   </body>
