--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Experience</a>
+            <a class="nav-link" href="#">Projects</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#">Experience</a>
           </li>
           <li class="nav-item px-1">
             <a class="nav-link" href="#">Contact</a>
@@ -82,17 +82,43 @@
       <div class="row pt-5 px-3">
         <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
             <i class="fas fa-code fa-4x pb-4"></i>
-            <h3><strong>Languages</strong></h3>
+            <h3><strong>Programming Languages</strong></h3>
+            <div class="descriptor py-2 mx-3">
+              <p class="my-0">C/C++</p>
+              <p class="my-0">Java</p>
+              <p class="my-0">HTML</p>
+              <p class="my-0">CSS/SCSS</p>
+              <p class="my-0">JavaScript/TypeScript</p>
+              <p class="my-0">Angular</p>
+              <p class="my-0">Node</p>
+            </div>
         </div>
         <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
             <i class="fas fa-chart-bar fa-4x pb-4"></i>
             <h3><strong>Technologies</strong></h3>
+            <div class="descriptor py-2 mx-3">
+                <p class="my-0">Git</p>
+                <p class="my-0">Shell Scripting</p>
+                <p class="my-0">IDEs</p>
+                <p class="my-0">Databases</p>
+                <p class="my-0">Amazon Web Service</p>
+                <p class="my-0">Jira/Confluence</p>
+            </div>
         </div>
         <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
             <i class="fas fa-desktop fa-4x pb-4"></i>
             <h3><strong>Operating Systems</strong></h3>
+            <div class="descriptor py-2 mx-3">
+                <p class="my-0">Windows</p>
+                <p class="my-0">Mac OS X</p>
+                <p class="my-0">Linux</p>
+            </div>
         </div>
       </div>
+    </div>
+
+    <div id="about" class="container-fluid text-center bg-main py-5">
+      <h1 class="py-3 text-uppercase"><strong>Projects</strong></h1>
     </div>
   </body>
 </html>
