Implemented Projects section

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <a class="nav-link" href="#skills">Skills</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Experience</a>
+            <a class="nav-link" href="#experience">Experience</a>
           </li>
           <li class="nav-item px-1">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
       </div>
@@ -117,8 +117,42 @@
       </div>
     </div>
 
-    <div id="about" class="container-fluid text-center bg-main py-5">
+    <div id="projects" class="container-fluid text-center bg-main py-5">
       <h1 class="py-3 text-uppercase"><strong>Projects</strong></h1>
+      <p>Coming soon!</p>
+    </div>
+
+    <div id="experience" class="container-fluid bg-second py-4 py-sm-5">
+      <h1 class="pt-3 pb-5 text-center text-uppercase"><strong>Experience</strong></h1>
+      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-5">
+        <div class="mx-4 mx-sm-5">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/blanc-labs-logo.png">
+          <h3 class="pt-2">Software Developer</h3>
+          <p>April 2018 – August 2018</p>
+          <hr class="my-4">
+          <div class="descriptor">
+            <li>Created automated unit test cases for Angular components/directives with Jasmine and Karma frameworks</li>
+            <li>Configured DNS and routing on AWS to deploy company’s local development and application servers</li>
+          </div>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-4 py-sm-5">
+        <div class="mx-4 mx-sm-5">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/creativity-through-arts-logo.png">
+          <h3 class="pt-2">Engagement Director</h3>
+          <p>September 2016 – June 2017</p>
+          <hr class="my-4">
+          <div class="descriptor">
+            <li>Analyzed issues with previous website, improved loading speed by optimizing JavaScript</li>
+            <li>Utilized Bootstrap library and CSS media queries to implement a mobile-friendly webpage</li>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="contact" class="container-fluid text-center bg-main py-5">
+      <h1 class="py-3 text-uppercase"><strong>Contact Me</strong></h1>
+      <p>Coming soon!</p>
     </div>
   </body>
 </html>
