Updated projects and experiences section

--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
     </header>
 
     <nav class="navbar navbar-right navbar-expand-sm sticky-top navbar-dark bg-main py-0">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false">
-        <span class="navbar-toggler-icon"></span>
-      </button>
       <div class="collapse navbar-collapse" id="navbar">
         <a class="navbar-brand" href="#"></a>
         <ul class="navbar-nav navbar-right ml-auto mt-2 mt-lg-0">
@@ -62,7 +59,7 @@
     <div id="about" class="container-fluid text-center bg-main pb-5">
       <h1 class="py-3 text-uppercase"><strong>About Me</strong></h1>
       <img src="img/profile-pic.jpg" alt="profile-pic" class="profile-pic rounded-circle py-2">
-      <p class="col-12 col-sm-7 mt-4 ml-auto mr-auto">I'm Jayson, an aspiring software developer. I am currently enrolled in the double degree program studying Business Administration at Wilfrid Laurier University and Computer Science at University of Waterloo.</p>
+      <p class="col-12 col-sm-7 mt-4 ml-auto mr-auto">I'm Jayson, an aspiring software developer. I am currently enrolled in the double degree program studying Computer Science at University of Waterloo and Business Administration at Wilfrid Laurier University.</p>
       <div class="container align-middle py-4">
         <a class="btn btn-success col-6 col-sm-3 mx-2 mb-2" href="mailto:jayson.lou@gmail.com" role="button">
           <i class="fas fa-envelope fa-lg mr-2"></i>Email
@@ -70,7 +67,7 @@
         <a class="btn btn-primary col-6 col-sm-3 mx-2 mb-2" href="https://www.linkedin.com/in/jaysonlou/" role="button">
           <i class="fab fa-linkedin fa-lg mr-2"></i>LinkedIn
         </a>
-        <a class="btn btn-warning col-6 col-sm-3 mx-2 mb-2" href="https://github.com/jayson-lou" role="button">
+        <a class="btn btn-warning col-6 col-sm-3 mx-2 mb-2" href="https://github.com/json-lou" role="button">
           <i class="fab fa-github fa-lg mr-2"></i>GitHub
         </a>
       </div>
@@ -82,57 +79,107 @@
       <div class="row pt-5 px-3">
         <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
             <i class="fas fa-code fa-4x pb-4"></i>
-            <h3><strong>Programming Languages</strong></h3>
+            <h3><strong>Languages</strong></h3>
             <div class="descriptor py-2 mx-3">
-              <p class="my-0">C/C++</p>
+              <p class="my-0">JavaScript</p>
+              <p class="my-0">C</p>
+              <p class="my-0">C++</p>
               <p class="my-0">Java</p>
+              <p class="my-0">Solidity</p>
               <p class="my-0">HTML</p>
-              <p class="my-0">CSS/SCSS</p>
-              <p class="my-0">JavaScript/TypeScript</p>
-              <p class="my-0">Angular</p>
-              <p class="my-0">Node</p>
+              <p class="my-0">CSS / Sass</p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
+            <i class="fas fa-desktop fa-4x pb-4"></i>
+            <h3><strong>Libraries & Frameworks</strong></h3>
+            <div class="descriptor py-2 mx-3">
+                <p class="my-0">Angular</p>
+                <p class="my-0">React</p>
+                <p class="my-0">Node.js</p>
+                <p class="my-0">Express</p>
+                <p class="my-0">Loopback</p>
+                <p class="my-0">Jasmine / Karma</p>
+                <p class="my-0">jQuery</p>
+                <p class="my-0">Spring</p>
+                <p class="my-0">Bootstrap</p>
             </div>
         </div>
         <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
             <i class="fas fa-chart-bar fa-4x pb-4"></i>
             <h3><strong>Technologies</strong></h3>
             <div class="descriptor py-2 mx-3">
-                <p class="my-0">Git</p>
                 <p class="my-0">Shell Scripting</p>
-                <p class="my-0">IDEs</p>
-                <p class="my-0">Databases</p>
-                <p class="my-0">Amazon Web Service</p>
-                <p class="my-0">Jira/Confluence</p>
-            </div>
-        </div>
-        <div class="col-12 col-sm-4 text-center pb-5 pb-sm-3">
-            <i class="fas fa-desktop fa-4x pb-4"></i>
-            <h3><strong>Operating Systems</strong></h3>
-            <div class="descriptor py-2 mx-3">
-                <p class="my-0">Windows</p>
-                <p class="my-0">Mac OS X</p>
-                <p class="my-0">Linux</p>
+                <p class="my-0">Git</p>
+                <p class="my-0">Eclipse</p>
+                <p class="my-0">MySQL</p>
+                <p class="my-0">MongoDB</p>
+                <p class="my-0">Amazon Web Services</p>
+                <p class="my-0">Jira / Confluence</p>
             </div>
         </div>
       </div>
     </div>
 
-    <div id="projects" class="container-fluid text-center bg-main pb-5">
-      <h1 class="py-3 text-uppercase"><strong>Projects</strong></h1>
-      <p>Coming soon!</p>
+    <div id="projects" class="container-fluid bg-main pb-5">
+      <h1 class="pt-3 pb-5 text-center text-uppercase"><strong>Projects</strong></h1>
+      <div class="jumbotron jumbotron-fluid jumbotron-custom mx-1 mx-sm-5 py-5">
+        <div class="mx-4 mx-sm-5">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/projects/tuneslide-logo.png">
+          <h3 class="pt-2">TuneSlide</h3>
+          <p>August 2018 – September 2018</p>
+          <hr class="my-4">
+          <p>Project description</p>
+          <p>Insert screenshots here.</p>
+          <hr class="my-4">
+          <div class="descriptor">
+            <li></li>
+          </div>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-fluid jumbotron-custom mx-1 mx-sm-5 py-5">
+        <div class="mx-4 mx-sm-5">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/projects/wc-dashboard-logo.svg">
+          <h3 class="pt-2">World Cup Dashboard</h3>
+          <p>June 2018 – July 2018</p>
+          <hr class="my-4">
+          <p>Project description</p>
+          <p>Insert screenshots here.</p>
+          <hr class="my-4">
+          <div class="descriptor">
+            <li></li>
+          </div>
+        </div>
+        </div>
     </div>
 
     <div id="experience" class="container-fluid bg-second pb-5">
       <h1 class="pt-3 pb-5 text-center text-uppercase"><strong>Experience</strong></h1>
       <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/blanc-labs-logo.png">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/velocia-logo.png">
           <h3 class="pt-2">Software Developer</h3>
-          <p>April 2018 – August 2018</p>
+          <p>August 2018</p>
           <hr class="my-4">
           <div class="descriptor">
+            <li>Configured DNS and routing on AWS to deploy company’s production servers</li>
+            <li>Designed wireframes for company's web application service</li>
+            <li>Built an API endpoint using Loopback to send and retrieve JSON responses from a MongoDB server</li>
+            <li>Leveraged external map libraries such as Leaflet and Mapbox to create a navigation interface</li>
+          </div>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-5">
+        <div class="mx-4 mx-sm-5">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/blanc-labs-logo.png">
+          <h3 class="pt-2">Software Developer</h3>
+          <p>April 2018 – July 2018</p>
+          <hr class="my-4">
+          <div class="descriptor">
+            <li>Utilized Agile technologies including Jira and Confluence to participate in daily scrums</li>
+            <li>Leveraged ReactiveX library to implement asynchronous data transfer between Angular and MuleSoft API layers</li>
+            <li>Implemented field validation and captcha authentication to improve security of user log-in</li>
             <li>Created automated unit test cases for Angular components/directives with Jasmine and Karma frameworks</li>
-            <li>Configured DNS and routing on AWS to deploy company’s local development and application servers</li>
           </div>
         </div>
       </div>
@@ -140,11 +187,26 @@
         <div class="mx-4 mx-sm-5">
           <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/creativity-through-arts-logo.png">
           <h3 class="pt-2">Engagement Director</h3>
+          <p>September 2015 – June 2017</p>
+          <hr class="my-4">
+          <div class="descriptor">
+            <li>Utilized Bootstrap library and CSS media queries to implement a mobile-friendly webpage</li>
+            <li>Represented the organization at local fairs/festivals to promote the council's events</li>
+            <li>Planned regular events such as art showcases and concerts</li>
+          </div>
+        </div>
+      </div>
+      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-4 py-sm-5">
+        <div class="mx-4 mx-sm-5">
+          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/project5k-logo.svg">
+          <h3 class="pt-2">Event Director</h3>
           <p>September 2016 – June 2017</p>
           <hr class="my-4">
           <div class="descriptor">
-            <li>Analyzed issues with previous website, improved loading speed by optimizing JavaScript</li>
-            <li>Utilized Bootstrap library and CSS media queries to implement a mobile-friendly webpage</li>
+            <li>Led and supervised bi-weekly fundraisers for younger students</li>
+            <li>Organized large volunteer events including Project Lunchbag, a food bank to aid homeless people of Toronto</li>
+            <li>Recorded meeting minutes</li>
+            <li>Contacted various companies and businesses for sponsorship opportunities</li>
           </div>
         </div>
       </div>
