--- a/index.html
+++ b/index.html
@@ -49,16 +49,13 @@
           <li class="nav-item px-1">
             <a class="nav-link" href="#experience">Experience</a>
           </li>
-          <li class="nav-item px-1">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
         </ul>
       </div>
     </nav>
 
     <div id="about" class="container-fluid text-center bg-main pb-5">
       <h1 class="py-3 text-uppercase"><strong>About Me</strong></h1>
-      <img src="img/profile-pic.jpg" alt="profile-pic" class="profile-pic rounded-circle py-2">
+      <img src="img/profile-pic1.jpg" alt="profile-pic" class="profile-pic rounded-circle py-2">
       <p class="col-12 col-sm-7 mt-4 ml-auto mr-auto">I'm Jayson, an aspiring software developer. I am currently enrolled in the double degree program studying Computer Science at University of Waterloo and Business Administration at Wilfrid Laurier University.</p>
       <div class="container align-middle py-4">
         <a class="btn btn-success col-6 col-sm-3 mx-2 mb-2" href="mailto:jayson.lou@gmail.com" role="button">
@@ -123,31 +120,43 @@
 
     <div id="projects" class="container-fluid bg-main pb-5">
       <h1 class="pt-3 pb-5 text-center text-uppercase"><strong>Projects</strong></h1>
-      <div class="jumbotron jumbotron-fluid jumbotron-custom mx-1 mx-sm-5 py-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-main mx-1 mx-sm-2 mx-lg-5 py-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/projects/tuneslide-logo.png">
+          <img class="experience-logo mb-3 mb-sm-4" src="img/projects/tuneslide/logo.png">
           <h3 class="pt-2">TuneSlide</h3>
           <p>August 2018 – September 2018</p>
           <hr class="my-4">
-          <p>Project description</p>
-          <p>Insert screenshots here.</p>
+          <p>TuneSlide is an application that creates Spotify playlists based on a user's mood. The user is required to complete a form of sliders, while TuneSlide will query through their Spotify library and create a playlist with the songs that match their slider picks.</p>
+          <div class="d-flex">
+            <img class="screenshot mx-2" src="img/projects/tuneslide/screenshot-1.png">
+            <img class="screenshot mx-2" src="img/projects/tuneslide/screenshot-2.png">
+            <img class="screenshot mx-2" src="img/projects/tuneslide/screenshot-3.png">
+          </div>
           <hr class="my-4">
           <div class="descriptor">
-            <li></li>
+            <p>Node.js, Angular, Express, MongoDB, Spotify API</p>
+            <li>Performed CRUD operations to import and update user’s Spotify music library to a MongoDB database</li>
+            <li>Built a search algorithm to query and sort the database of songs by relevance with user-provided parameters</li>
           </div>
         </div>
       </div>
-      <div class="jumbotron jumbotron-fluid jumbotron-custom mx-1 mx-sm-5 py-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-main mx-1 mx-sm-2 mx-lg-5 py-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/projects/wc-dashboard-logo.svg">
-          <h3 class="pt-2">World Cup Dashboard</h3>
+          <img class="experience-logo mb-3 mb-sm-4" src="img/projects/jl-wc-dashboard/logo.svg">
+          <h3 class="pt-2">World Cup '18 Dashboard</h3>
           <p>June 2018 – July 2018</p>
           <hr class="my-4">
-          <p>Project description</p>
-          <p>Insert screenshots here.</p>
+          <p>World Cup '18 Dashboard is a web application that displays live scores and updates of the 2018 FIFA World Cup.</p>
+          <div class="d-flex">
+            <img class="screenshot mx-2" src="img/projects/jl-wc-dashboard/screenshot-1.png">
+            <img class="screenshot mx-2" src="img/projects/jl-wc-dashboard/screenshot-2.png">
+            <img class="screenshot mx-2" src="img/projects/jl-wc-dashboard/screenshot-3.png">
+          </div>
           <hr class="my-4">
           <div class="descriptor">
-            <li></li>
+            <p>Angular, World Cup API</p>
+            <li>Utilized Angular services to send HTTP requests with a third-party sports RESTful API</li>
+            <li>Created automated unit tests for frontend components using Jasmine and Karma frameworks</li>
           </div>
         </div>
         </div>
@@ -155,9 +164,9 @@
 
     <div id="experience" class="container-fluid bg-second pb-5">
       <h1 class="pt-3 pb-5 text-center text-uppercase"><strong>Experience</strong></h1>
-      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-second mx-1 mx-sm-2 mx-lg-5 py-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/velocia-logo.png">
+          <img class="experience-logo mb-3 mb-sm-4" src="img/experience/velocia-logo.png">
           <h3 class="pt-2">Software Developer</h3>
           <p>August 2018</p>
           <hr class="my-4">
@@ -169,9 +178,9 @@
           </div>
         </div>
       </div>
-      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-second mx-1 mx-sm-2 mx-lg-5 py-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/blanc-labs-logo.png">
+          <img class="experience-logo mb-3 mb-sm-4" src="img/experience/blanc-labs-logo.png">
           <h3 class="pt-2">Software Developer</h3>
           <p>April 2018 – July 2018</p>
           <hr class="my-4">
@@ -183,9 +192,9 @@
           </div>
         </div>
       </div>
-      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-4 py-sm-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-second mx-1 mx-sm-2 mx-lg-5 py-4 py-sm-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/creativity-through-arts-logo.png">
+          <img class="experience-logo mb-3 mb-sm-4" src="img/experience/creativity-through-arts-logo.png">
           <h3 class="pt-2">Engagement Director</h3>
           <p>September 2015 – June 2017</p>
           <hr class="my-4">
@@ -196,9 +205,9 @@
           </div>
         </div>
       </div>
-      <div class="jumbotron jumbotron-fluid mx-1 mx-sm-5 py-4 py-sm-5">
+      <div class="jumbotron jumbotron-fluid jumbotron-second mx-1 mx-sm-2 mx-lg-5 py-4 py-sm-5">
         <div class="mx-4 mx-sm-5">
-          <img id="bl" class="experience-logo mb-3 mb-sm-4" src="img/experience/project5k-logo.svg">
+          <img class="experience-logo mb-3 mb-sm-4" src="img/experience/project5k-logo.svg">
           <h3 class="pt-2">Event Director</h3>
           <p>September 2016 – June 2017</p>
           <hr class="my-4">
@@ -210,11 +219,6 @@
           </div>
         </div>
       </div>
-    </div>
-
-    <div id="contact" class="container-fluid text-center bg-main pb-5">
-      <h1 class="py-3 text-uppercase"><strong>Contact Me</strong></h1>
-      <p>Coming soon!</p>
     </div>
   </body>
 </html>
